# media-finder

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.example.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: README  env.py  script.py.mako
alembic/versions/: 0001_initial_schema.py
app/: __init__.py  config.py  database.py  dependencies.py  exceptions.py  main.py  security.py  web_templates.py
app/clients/: __init__.py  http_client.py  stremio_addon_client.py  tmdb_client.py
app/models/: __init__.py  download_history.py  provider.py  search_history.py  setting.py
app/providers/: __init__.py  base.py  google_drive.py  google_search.py  jackett.py  mediafusion.py  mock.py  prowlarr.py  real_utils.py  registry.py  stremio_provider.py  torrentio.py
app/routers/: __init__.py  downloads.py  files.py  health.py  metadata.py  pages.py  providers.py  qbittorrent.py  search.py  settings.py
app/schemas/: __init__.py  common.py  download.py  metadata.py  provider.py  search.py  stremio.py  web.py
scripts/: entrypoint.sh
tests/: conftest.py  test_config.py  test_container_runtime.py  test_database.py  test_google_search_provider.py  test_health.py  test_mock_provider.py  test_pages.py  test_phase3_domain.py  test_phase4_search.py  test_phase5_qbittorrent.py  test_phase6_providers.py  test_phase7_stremio.py  test_phase8_2_flow.py  test_phase8_tmdb.py  test_provider_health.py  test_provider_registry.py  test_provider_schemas.py  test_qbittorrent_service.py  test_search_service.py
(+62 files in other folders)
